...

                    <org.eyeseetea.malariacare.views.CustomEditText
                        android:id="@+id/edittext_server_url"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/server_url"
                        android:inputType="textUri"
                        android:singleLine="true"
                        app:font="@string/font_name_regular"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
...

                    <org.eyeseetea.malariacare.views.CustomEditText
                        android:id="@+id/edittext_username"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/username"
                        android:inputType="text"
                        android:singleLine="true"
                        app:font="@string/font_name_regular"/>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
...

                    <org.eyeseetea.malariacare.views.CustomEditText
                        android:id="@+id/edittext_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:singleLine="true"
                        app:font="@string/font_name_regular"/>
                </android.support.design.widget.TextInputLayout>

                <org.eyeseetea.malariacare.views.CustomButton
...
