<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of Facility QA Tool App.
  ~
  ~  Facility QA Tool App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Facility QA Tool App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.eyeseetea.malariacare.LoginActivity">

    <!-- Login progress -->
    <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content" android:layout_height="wrap_content"
        android:layout_marginBottom="8dp" android:visibility="gone"
        android:layout_gravity="center" />

    <ScrollView android:id="@+id/login_form" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center">

            <LinearLayout android:id="@+id/user_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:layout_gravity="center"
                android:gravity="center">

                <org.eyeseetea.malariacare.views.CustomAutoCompleteTextView
                    android:id="@+id/user" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/login_info_username"
                    android:inputType="textPersonName" android:maxLines="1"
                    android:singleLine="true"
                    app:tDimension="@string/font_size_level1"
                    app:tFontName="@string/medium_font_name"/>

                <org.eyeseetea.malariacare.views.CustomEditText
                    android:id="@+id/password" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/login_info_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/login_info_password"
                    android:imeOptions="actionUnspecified" android:inputType="textPassword"
                    android:maxLines="1" android:singleLine="true"
                    app:tDimension="@string/font_size_level1"
                    app:tFontName="@string/medium_font_name"/>

                <org.eyeseetea.malariacare.views.CustomAutoCompleteTextView
                    android:id="@+id/dhis_url" android:layout_width="match_parent"
                    android:layout_height="wrap_content" android:hint="@string/server_url"
                    android:inputType="textUri" android:maxLines="1"
                    android:singleLine="true"
                    app:tDimension="@string/font_size_level1"
                    app:tFontName="@string/medium_font_name"/>

                <org.eyeseetea.malariacare.views.CustomButton
                    android:id="@+id/email_sign_in_button" style="?android:textAppearanceSmall"
                    android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:layout_marginTop="16dp" android:text="@string/login_info_sign_in"
                    android:textStyle="bold"
                    android:background="@color/headerColor"
                    android:textColor="@color/white"
                    app:tDimension="@string/font_size_level1"
                    app:tFontName="@string/bold_font_name"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>