...
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->
<resources>
    <string name="app_name" translatable="false">QA App</string>
    <string name="developers" translatable="false">EyeSeeTea LTD</string>
    <string name="empty_string" translatable="false"></string>
    <string name="ok" translatable="false">Ok</string>
    <string name="login_info_dhis_default_server_url" translatable="false">https://malariacare.psi.org</string>
    <string name="number_zero" translatable="false">0</string>
    <string name="number_zero_percentage" translatable="false">0 % </string>
    <string name="custom_info_one" translatable="false">1</string>
    <string name="normal_font" translatable="false">Roboto-Medium.ttf</string>
    <string name="light_font" translatable="false">Roboto-Light.ttf</string>
...
    <string name="default_tabGroup" translatable="false">default_tabGroup</string>
    <string name="default_program" translatable="false">default_program</string>
    <string name="default_orgUnit" translatable="false">default_orgUnit</string>
    <string name="default_orgUnits" translatable="false">default_orgUnits</string>
    <string name="tab_tag_plan" translatable="false">tab_plan</string>
    <string name="tab_tag_assess" translatable="false">tab_assess</string>
    <string name="tab_tag_improve" translatable="false">tab_improve</string>
    <string name="tab_tag_monitor" translatable="false">tab_monitor</string>
    <string name="hide_planning_tab_key" translatable="false">tab_hide</string>
    <string name="developer_option" translatable="false">show_dev_options</string>
    <string name="export_data_option" translatable="false">export_data_option</string>
    <string name="import_data_option" translatable="false">import_data_option</string>

...
