<?xml version="1.0" encoding="utf-8"?>
<resources>

<string name="yes">"Yes"</string>
<string name="no">"No"</string>
<string name="cancel">"Cancel"</string>
<string name="score">"Score"</string>
<string name="title_id">"ID"</string>
<string name="title_name">"Name"</string>
<string name="good">"Good"</string>
<string name="fair">"Fair"</string>
<string name="poor">"Poor"</string>
<string name="lorem_ipsum">"Lorem ipsum dolor sit amet"</string>
...
<string name="quality_of_care">"Quality of Care (QoC) Score:"</string>
<string name="overall_quality_of_care">"Overall Quality of Care (QoC) score:"</string>
<string name="feedback_info_passed">"Pass"</string>
<string name="feedback_info_failed">"Fail"</string>
<string name="feedback_info_not_answered">"Na"</string>
<string name="feedback_info_no_feedback">"No feedback"</string>
<string name="feedback_info_conflict">"Conflict"</string>
<string name="settings_checkbox_location_required">"Location required"</string>
<string name="settings_checkbox_description_location_required">"When activated, location is a required field for pushing data to dhis server"</string>
<string name="font_size_level0_title">"Extra small"</string>
<string name="font_size_level1_title">"Small"</string>
<string name="font_size_level2_title">"Medium"</string>
<string name="font_size_level3_title">"Large"</string>
...
