<!--
  ~ Copyright (c) 2015.
  ~
  ~ This file is part of Facility QA Tool App.
  ~
  ~  Facility QA Tool App is free software: you can redistribute it and/or modify
  ~  it under the terms of the GNU General Public License as published by
  ~  the Free Software Foundation, either version 3 of the License, or
  ~  (at your option) any later version.
  ~
  ~  Facility QA Tool App is distributed in the hope that it will be useful,
  ~  but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~  GNU General Public License for more details.
  ~
  ~  You should have received a copy of the GNU General Public License
  ~  along with Foobar.  If not, see <http://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="title_activity_settings">Settings</string>

    <string name="settings_checkbox_show_num_dems">Show num/dems</string>
    <string name="settings_checkbox_description_show_num_dems">When activated, survey questions show their numerators and denominators, used to calc the survey score</string>
    <string name="settings_checkbox_customize_fonts">Customize fonts?</string>
    <string name="settings_list_font_sizes">Fonts size</string>
    <string-array name="settings_array_titles_font_sizes">
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Extra large</item>
    </string-array>
    <string-array name="settings_array_values_font_sizes">
        <item>small</item>
        <item>medium</item>
        <item>large</item>
        <item>extra</item>
    </string-array>
    <string name="settings_text_dhis_server_url">DHIS Server URL</string>


    <string name="pref_header_general">General</string>

</resources>
