<?xml version="1.0" encoding="utf-8"?>
<org.eyeseetea.malariacare.views.CustomTextView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@android:id/text1"
    style="@style/EyeSeeMainSpinnerItemBackground"
    android:singleLine="true"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:ellipsize="marquee"
    android:textAlignment="gravity"
    android:gravity="center"
    android:textColor="@color/white"
    android:paddingRight="@dimen/survey_main_spinner_padding_leftright"
    android:paddingLeft="@dimen/survey_main_spinner_padding_leftright"
    android:paddingBottom="@dimen/survey_main_spinner_padding_updown"
    android:paddingTop="@dimen/survey_main_spinner_padding_updown"
    app:tDimension="@string/font_size_level2"
    app:tFontName="@string/light_font"
    />